[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "quant_clone"
version = "0.1.0"
authors = [{ name="electroglyph" },]
description = "Generate a llama-quantize command to copy the quantization parameters of any GGUF"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["gguf @ git+https://github.com/ggml-org/llama.cpp.git#subdirectory=gguf-py"]
[project.scripts]
quant_clone = "quant_clone.main:run"